LIST OF CHANGES
---------------

release 58.2.0
 - enhancement of code for interaction with the Majora/COG-UK API
 - added analysis for Duplex-Seq libraries
 
release 58.1.0
 - added npg_climb2mlwh to update warehouse from uploaded
   climb data
 - added ability to use custom locations and/or names for the
   main log of the pipeline script
 - the main log of the pipeline script is copied to the analysis directory
 - add script for updating MLWH with state of Majora/COG-UK metadata

release 58.0.0
 - a class for generating job definitions for autoqc generic
   checks
 - implementation of job generation for autoqc generic checks
   for artic and ampliconstats
 - generation of the autoqc generic result for artic and the
   review result is removed from the stage2pp job for artic
 - generation of the autoqc generic result for ampliconstats is
   removed from the stage2App job for ampliconstats

release 57.17.0
 - a generic way to specify constructor options in the function
   listing in a registry and its implementation to iRODS archival
   jobs and a stage2pp job
 - implementation for the ampliconstats portable pipeline
 - new pipeline function - stage2App - and its mapping to the
   npg_pipeline::function::stage2pp class
 - a new portable pipeline to produce ampliconstats data and its
   mapping to the stage2App pipeline function

release 57.16.0
 - a new function for archival of pp data to iRODS
 - stage2pp function implementation is refactored to create common functions
   and attributes, which in future could be used by additional portable
   pipelines

release 57.15.0
 - append autoqc generic result generation at the end of ncov2019_artic_nf
   portable pipeline
 - tests update following a change in the default behaviour of the
   add_object method in WTSI::NPG::iRODS 

release 57.14.0
 - switch to sample control flag when determining eligibility for
   pp data archival

release 57.13.1
 - made run deletion policy consistent with a change to eligibility