@@ -1,6 +1,10 @@
 LIST OF CHANGES
 ---------------
 
+ - following a decision to send data to CLIMB regardless of artic
+   QC status, the file glob of the data to upload is changed to
+   locations where both passed and failed data are available
+
 release 58.2.0
  - enhancement of code for interaction with the Majora/COG-UK API
  - added analysis for Duplex-Seq libraries
